# RustyThermostat

./: .gitignore  Cargo.toml  README.md
config/: sample_ROCKET.toml
initalLoad/: Rusty_thermostat.sql
research/: Rusty_thermostat.sql  db_diesel.md  rs485.md  rust_thermostat_db_markup.txt  security.md  weather_api.md
schema/: env_capability.rs  hva_cactivity.rs  pollution_reading.rs  prelude.rs  sensor_reading_history.rs  sensors.rs  weather_reading.rs  weekdays.rs  zones.rs
src/: main.rs  models.rs  weather.rs
src/api/: jwttokens.rs  mod.rs  sensor.rs
src/config/: sample_ROCKET.toml
src/dbman/: mod.rs
src/schema/: alerts.rs  change_source.rs  communication.rs  controllers.rs  env_capability.rs  home_summary.rs  hva_cactivity.rs  manual_change_history.rs  mod.rs  pollution_reading.rs  prelude.rs  schedules.rs  sensor_reading_history.rs  sensors.rs  weather_reading.rs  zones.rs
src/sensors/: mod.rs  pi_ser.rs
