[package]
name = "rusty_thermostat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.5.0", features = [ "v4", "fast-rng" ] }
chrono = "^0.4"
serde = "^1.0"
serde_json = "1.0.108"
serde_derive = "^1.0"
reqwest = "^0.11.17"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid" ] }
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.1"
rocket = "=0.5.0-rc.4"
tokio-util = { version = "0.7.10", features = ["codec"] }
bytes = "1.5.0"
futures = "0.3.29"
sha2 = "0.10.8"
hex-literal = "0.4.1"
hmac = "0.12.1"
