[package]
name = "rusty_thermostat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "^1.0"
chrono = "^0.4"
serde = "^1.0"
serde_json = "1.0.108"
serde_derive = "^1.0"
reqwest = "^0.11.17"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid" ] }
tokio = { version = "1", features = ["full"] }
rocket = { version = "=0.5.0-rc.4", features = [ "json" ]}